# rust_projet

./: README.md
common/: Cargo.toml
common/src/: maze.rs
server/: Cargo.toml
server/src/: handlers.rs  main.rs  state.rs  utils.rs
