[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3" # Pour HTTP, ou `tokio` et `tokio-tungstenite` pour WebSocket
rand = "0.8" # Pour générer des codes aléatoires
tokio = { version = "1", features = ["full"] }
common = { path = "../common" }